# zopflipng

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  package.json  tsconfig.json
addon/: zopflipng.cpp
install/: cleanbuild.js  index.js  placeheaders.js
lib/: index-default.ts  index.ts  util.ts
test/: index.test.js
